--- a/final/css/status.css
+++ b/final/css/status.css
@@ -1,7 +1,5 @@
 nav {
-    position: relative;
     background-color: transparent;
-    overflow: visible;
 
     z-index: 50;
 }
@@ -25,9 +23,12 @@ nav {
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    margin-top: 4rem;
+    padding-top: 10rem;
 
     flex-grow: 1;
+
+    overflow-y: hidden;
+    height: 100vh;
 
 
 }
@@ -44,10 +45,6 @@ h1, p {
 h2, h4 {
     text-align: center;
     color: black;
-}
-
-.estimated-time {
-    margin-bottom: 2rem;
 }
 
 .progress-bar {
@@ -87,6 +84,14 @@ h2, h4 {
 }
 
 
+.receipt {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+
+    overflow-y: scroll;
+}
+
 .total-container {
     width: 100%;
     max-width: 27.5rem;
@@ -98,10 +103,8 @@ h2, h4 {
     gap: 2rem;
     padding-bottom: 2rem;
 
-    position: absolute;
-    bottom: 0;
+    
 
-    z-index: 2000;
 
 }
 
