--- a/final/css/general.css
+++ b/final/css/general.css
@@ -110,34 +110,52 @@ nav {
     bottom: 0;
 
     display: flex;
-    justify-content: space-around;
-    padding: 1rem;
+    justify-content: space-between;
+    padding: 0.75rem 3rem;
     z-index: 200;
 
 
 
 
+
+
+
     .icon-container {
-        object-fit: cover;
+        /* object-fit: cover;
         text-decoration: none;
-        width: 2.875rem;
+        width: 3.5rem;
         display: flex;
         justify-content: center;
         align-items: center;
         flex-direction: column;
         gap: 0.5rem;
+        position: relative;
+        border-radius: 0.5rem; */
+
+        display: flex;
+        gap: 0.5rem;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+
+        width: 4rem;
+        text-decoration: none;
+        padding: 0.5rem;
+        position: relative;
+        /* transition: background-color 0.3s ease; */
+        border-radius: 10px;
     }
 
     img {
-        height: 2.5rem;
+        height: 2rem;
     }
 
 }
 
-.bottom-nav .icon-container.active img {
+.bottom-nav .icon-container.active {
     background-color: var(--brown);
-    border-radius: 50%; 
-    padding: 5px;
+    /* border-radius: 1rem; 
+    padding: 1rem; */
 }
 
 
@@ -149,6 +167,8 @@ nav {
     color: white;
     text-decoration: none;
     text-align: center;
+
+
 }
 
 .label:visited {
