--- a/final/css/quantity.css
+++ b/final/css/quantity.css
@@ -1,11 +1,11 @@
 .quantity {
-    width: 1.25rem;
-    height: 1.25rem;
+    width: 1.75rem;
+    height: 1.75rem;
     position: absolute;
-    background-color: red;
+    background-color: var(--bag-red);
     padding: 0.5rem;
-    top: 1rem;
-    right: 1.25rem;
+    top: 0.7rem;
+    right: 1.1rem;
     border-radius: 50%;
 
     display: flex;
@@ -14,7 +14,8 @@
     
     p {
         
-        font-size: 0.8rem;
+        font-size: 1rem;
+        font-weight: 500;
         font-family: var(--main-font);
     
     }
