--- a/final/css/status.css
+++ b/final/css/status.css
@@ -1,16 +1,17 @@
 nav {
+    position: absolute;
     background-color: transparent;
 
-    z-index: 50;
+    z-index: 3000;
 }
 
 .nav-background {
     width: 100%;
     max-width: 27.5rem;
     position: absolute;
-    top: 0;
 
-    z-index: 1;
+
+    z-index: 1500;
     transform: translateY(-1rem);
 
     svg {
@@ -22,15 +23,24 @@ nav {
 .content {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
-    padding-top: 8rem;
+    gap: 3rem;
+    padding-top: 9rem;
 
     flex-grow: 1;
 
-    overflow-y: hidden;
+    overflow-y: scroll;
     height: 100vh;
 
+    position: relative;
+    z-index: 500;
 
+
+}
+
+section {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
 }
 
 h1, p {
@@ -89,7 +99,7 @@ h2, h4 {
     flex-direction: column;
     gap: 2rem;
 
-    overflow-y: scroll;
+
 }
 
 .total-container {
