--- a/final/css/detail.css
+++ b/final/css/detail.css
@@ -182,8 +182,9 @@ input[type="radio"] {
     appearance: none;
     -webkit-appearance: none;
     -moz-appearance: none; 
-    width: 20px;
-    height: 20px;
+
+    width: 1.35rem;
+    height: 1.25rem;
     border: 2px solid black; 
     border-radius: 100%;       
     outline: none;
@@ -203,10 +204,14 @@ input[type="radio"]:checked {
 input[type="radio"]:checked::before {
     content: "";
     display: block;
-    width: 10px;
-    height: 10px;
-    margin: 3px;
+    width: 0.625rem;
+    height: 0.625rem;
+    /* margin: 3px; */
     border-radius: 50%;
     background-color: black; 
+}
+
+input[type="radio" i] {
+    margin: 0;
 }
 
