--- a/final/css/payment-1.css
+++ b/final/css/payment-1.css
@@ -82,7 +82,7 @@ h4 {
     background-color: white;
 
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
     border-radius: 0.5rem;
     gap: 1rem;
@@ -104,11 +104,15 @@ h4 {
     color: white;
     background-color: var(--brown);
     border-radius: 1rem;
+    box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.25);
 
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+
+    position: relative;
+    z-index: 3000;
 
     p {
         font-weight: 700;
@@ -120,37 +124,24 @@ h4 {
 
 }
 
-.point2 {
-    width: 12.5rem;
-    min-height: 4.875rem;
-
-    margin: 0 auto;
-    /* border: 3px solid black; */
-    color: white;
-    background-color: var(--brown);
-    border-radius: 1rem;
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-
-    p {
-        font-weight: 700;
-    }
-
-    p:nth-child(1){
-        font-size: 0.75rem;
-    }
-
+.point-swirl {
+    position: absolute;
+    transform: translateY(-6rem);
 }
 
 .pickup-time, .add-tips {
     padding: 0 2rem;
 
+    position: relative;
+    z-index: 4000;
+
     h4 {
         margin-bottom: 0.5rem;
     }
+}
+
+.add-tips {
+    margin-top: 1rem;
 }
 
 
@@ -160,6 +151,8 @@ h4 {
     text-wrap: nowrap;
     gap: 0.5rem;
     overflow-x: scroll;
+
+    scrollbar-width: none;
 
 }
 
