--- a/final/css/bag.css
+++ b/final/css/bag.css
@@ -93,6 +93,11 @@ h4 {
     background-color: var(--light-yellow);
 }
 
+.item-name,
+.item-price {
+    margin: 0; /* Removes default margin */
+}
+
 /* Subtotal Section */
 .subtotal {
     display: flex;
@@ -129,8 +134,9 @@ h4 {
 
 
 .pop-items-container {
-    width: 9.1875rem;
-    height: 12.875rem;
+    width: 10rem;
+    /* height: 12.875rem; */
+    height: auto;
 
     flex: 0 0 auto; 
     display: flex;
@@ -167,30 +173,41 @@ h4 {
 
 .description {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    flex-direction: column;
+    align-items: center; 
+    gap: 0.5rem; 
+}
+
+.description .item-info {
+    display: flex;
     width: 100%;
-
-    font-family: var(--menu-font);
-
-    /* font-size: 0.9rem;
-    color: #555;
-    width: 100%; 
-    padding: 0 0.5rem;  */
+    justify-content: space-between; 
 }
 
 .add-button {
-    margin: 0;
-    padding: 0;
-    border: none;
+    padding: .5rem 2rem;
+    border: 2px solid black;
+    border-radius: 20px;
     background: none;
+    text-align: center;
+    width: fit-content; /* Button adapts to content width */
+}
 
-    height: 1.35rem;
+.add-button p { 
+    margin: 0; /* Removes any extra margin */
+    text-align: center; /* Aligns text */
 }
 
 .empty-bag img {
     margin-bottom: .5rem;
 }
 
+/* .description p {
+    text-align: center;
+}
+
+.description p:nth-last-child() {
+    margin-bottom: 1rem;
+} */
 
 
