--- a/final/css/bag.css
+++ b/final/css/bag.css
@@ -84,6 +84,8 @@ h4 {
     gap: 1rem;
     overflow-x: hidden;
     overflow-y: auto;
+
+    padding: 0 1rem;
 }
 
 /* item in bag */
@@ -111,7 +113,7 @@ h4 {
 }
 
 .fav-section {
-    padding: 1rem 2rem;
+    padding: 1rem 0rem;
 }
 
 
