--- a/final/css/payment-1.css
+++ b/final/css/payment-1.css
@@ -26,23 +26,6 @@ nav {
     }
 }
 
-/* .content-container {
-    transform: translateY(5rem);
-    z-index: 40;
-
-
-    overflow-y: visible;
-    overflow-x: hidden;
-
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: calc(100% - 8.5rem);
-
-
-
-} */
-
 .content {
     display: flex;
     flex-direction: column;
@@ -207,8 +190,9 @@ input[type="radio"] {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 2rem;
-    padding-bottom: 2rem;
+    gap: 0.5rem;
+    padding: 2rem;
+    padding-top: 0;
 
     position: absolute;
     bottom: 0;
@@ -220,7 +204,6 @@ input[type="radio"] {
 .total {
     width: 100%;
     max-width: 23.5rem;
-    padding: 0 2rem;
 
 
     display: flex;
