--- a/final/css/payment-selection.css
+++ b/final/css/payment-selection.css
@@ -7,7 +7,7 @@ nav {
 }
 
 .content {
-    transform: translateY(5rem);
+    transform: translateY(7rem);
     z-index: 40;
 }
 
@@ -35,7 +35,7 @@ h1 {
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
-    margin: 2rem;
+    margin: 2rem 0;
 }
 
 label {
@@ -70,5 +70,7 @@ input {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+
+    padding: 0 2rem;
 }
 
