--- a/final/css/status.css
+++ b/final/css/status.css
@@ -23,8 +23,8 @@ nav {
 .content {
     display: flex;
     flex-direction: column;
-    gap: 3rem;
-    padding-top: 9rem;
+    gap: 2rem;
+    padding-top: 8rem;
 
     flex-grow: 1;
 
@@ -45,6 +45,10 @@ section {
 
 h1, p {
     text-align: center;
+}
+
+h1 {
+    font-size: 2rem;
 }
 
 .order-number {
@@ -87,11 +91,20 @@ h2, h4 {
 
 .status:last-child {
     opacity: 0.4;
+    transition: opacity 0.8s ease-in;
 
-    .step {
-        background-color: var(--light-yellow);
-    }
 }
+
+@keyframes blink {
+    0% { opacity: 0.4; }
+    50% { opacity: 1; }
+    100% { opacity: 0.4; }
+}
+
+.in-progress {
+    animation: blink 0.8s infinite;
+}
+
 
 
 .receipt {
