--- a/final/css/profile.css
+++ b/final/css/profile.css
@@ -250,3 +250,26 @@ h3 {
     transition: transform 0.1s ease, box-shadow 0.2s ease; 
     align-items: center;
 }
+
+.screen-container-2 {
+    max-width: 27.5rem;
+    height: 100vh;
+    margin: auto;
+    --main-font: 'Montserrat', sans-serif;
+    --menu-font: 'Inter', sans-serif;
+    background-color: white;
+    overflow-y: auto;
+    position: relative;
+}
+
+.background {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    /* background: url('/images/icons/bg-stars.svg') no-repeat center center; */
+    height: 100vh;
+    background-size: cover;
+    z-index: 1;
+}
