--- a/css/test.css
+++ b/css/test.css
@@ -1,7 +1,8 @@
 .image_link {
-    width: 100%;
+    width: 50%;
     display: flex;
     justify-content: center;
+    margin: 0 auto;
 
     img {
         width: 50%;
