--- a/final/css/button.css
+++ b/final/css/button.css
@@ -13,7 +13,7 @@ button + button {
     width: 100%;
 
     /* max-width: 21.5rem; */
-
+    font-family: var(--main-font);
     height: 3.5rem;
     background-color: var(--brown);
     color: white;
@@ -40,7 +40,7 @@ button + button {
 
     width: 100%;
     /* max-width: 21.5rem; */
-
+    font-family: var(--main-font);
     height: 3.5rem;
     background-color: white; 
     color: var(--brown); 
