--- a/final/css/profile.css
+++ b/final/css/profile.css
@@ -66,6 +66,11 @@ h3 {
     margin-bottom: 3.56rem;
 } */
 
+.rewards-section, .rules {
+    position: relative;
+    z-index: 3000;
+}
+
 
 .screen-container-2 {
     max-width: 27.5rem;
@@ -88,6 +93,7 @@ h3 {
     height: 100vh;
     background-size: cover;
     z-index: 1;
+}
 
 .reward-buttons {
     padding: 0 2rem;
